--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
  - npm run lint
 #  - npm run test:headless
  - npm run build
- - xvfb-run npm run e2e
+#  - xvfb-run npm run e2e
 # language: node_js
 # node_js:
 #  - "8.11"
